--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,13 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
-@import './example';
+// @import './example';
+@import './setup';
+@import './header';
+@import './hero';
+@import './howitworks';
+@import './fruits';
+@import './contacts';
+@import './footer';
+@import './yourorder';
+@import './thankyou';
