--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,2 +1,95 @@
-<section class="fruits"></section>
-<!-- teścik -->
+<section class="fruits">
+    <div class="fruit-header">
+        <div class="fruit-header-container">
+            <h2>Organic Fruits</h2>
+            <p>Our organic fruits are hand-picked from local farms and delivered straight to your doorstep, 
+            ensuring that you get the freshest and most nutritious produce possible. 
+            We offer a wide selection of organic fruits grown without the use of harmful pesticides or chemicals.
+            </p>
+        </div>
+    </div>
+
+    <div class="cards-container">
+            <ul class="fruit-cards">
+                <li class="card one">
+                    <div class="card-inside">
+                        <h3>Strawberry</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Strawberry">
+                        <button>100 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card two">
+                    <div class="card-inside">
+                        <h3>Banana</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Banana">
+                        <button>80 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card three">
+                    <div class="card-inside">
+                        <h3>Watermelon</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Watermelon">
+                        <button>40 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card four">
+                    <div class="card-inside">
+                        <h3>Lime</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Lime">
+                        <button>60 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card five">
+                    <div class="card-inside">
+                        <h3>Apple</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Apple">
+                        <button>50 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card six">
+                    <div class="card-inside">
+                        <h3>Peach</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Peach">
+                        <button>80 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card seven">
+                    <div class="card-inside">
+                        <h3>Plums</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Plums">
+                        <button>40 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card eight">
+                    <div class="card-inside">
+                        <h3>Orange</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Orange">
+                        <button>60 UAH / kg</button>
+                    </div>
+                </li>
+                <li class="card nine">
+                    <div class="card-inside">
+                        <h3>Kiwi</h3>
+                        <p>Plant</p>
+                        <img src="" alt="Kiwi">
+                        <button>90 UAH / kg</button>
+                    </div>
+                </li>
+            </ul>
+    </div>
+
+    <div class="order-btn">
+        <button>
+            <img src="">
+            Order
+        </button>
+    </div>
+</section>
