--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -86,7 +86,7 @@
             </ul>
     </div>
 
-    <div class="order-btn">
+    <div class="order-btn" id="order-btn-click">
         <button>
             <img src="">
             Order
