Update header html css
bugfix
display: none;

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,18 @@
-<header class="header"></header>
-    <nav class="nav-layout">
-        <ul class="list site-nav">
-            <li><a href="" class="link" id="">How It Works</a></li>
-            <li><a href="" class="link" id="">Fruits</a></li>
-            <li><a href="" class="link" id="">Contacts</a></li>
-        </ul>
-        <div class="logo-box">
-            <svg class="logo" width="16" height="16">
-                <use href="./images/Icons-svg.svg#icon-logo"></use>
-            </svg>
-            <a href="./index.html" class="logo-text">fresh harvest box
-            </a>
-        </div>
-        <svg class="icon-basket" width="18.67" height="23.33">
-            <use href="./images/Icons-svg.svg#icon-basket"></use>
-        </svg>
-    </nav>
+<header class="header">
+  <nav class="nav-layout">
+    <ul class="list site-nav">
+      <li><a href="" class="link" id="">How It Works</a></li>
+      <li><a href="" class="link" id="">Fruits</a></li>
+      <li><a href="" class="link" id="">Contacts</a></li>
+    </ul>
+    <div class="logo-box">
+      <svg class="logo" width="16" height="16">
+        <use href="./images/Icons-svg.svg#icon-logo"></use>
+      </svg>
+      <a href="./index.html" class="logo-text">fresh harvest box </a>
+    </div>
+    <svg class="icon-basket" width="18.67" height="23.33">
+      <use href="./images/Icons-svg.svg#icon-basket"></use>
+    </svg>
+  </nav>
+</header>
