--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,2 +1,26 @@
 .hero {
+    background-color: #AE1332;
+}
+
+.container .hero {
+    max-width: 335px;
+    border: 1px dashed blue;
+}
+
+.hero-header {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 100%;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
+}
+
+.hero-banner {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+
 }
