--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,12 +7,12 @@
     </ul>
     <div class="logo-box">
       <svg class="logo" width="16" height="16">
-        <use href="./images/Icons-svg.svg#icon-logo"></use>
+        <use href=""></use>
       </svg>
-      <a href="./index.html" class="logo-text">fresh harvest box </a>
+      <a href="" class="logo-text">fresh harvest box </a>
     </div>
     <svg class="icon-basket" width="18.67" height="23.33">
-      <use href="./images/Icons-svg.svg#icon-basket"></use>
+      <use href=""></use>
     </svg>
   </nav>
 </header>
