--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,7 @@
 <section class="hero">
-    test
+    <h1 class="hero-header">fresh harvest box is your one-stop place for a delicious fruit basket</h1>
+    <div class="hero-banner">
+
+    </div>
+    </h1>
 </section>
