HTML CSS changes
Dodano stylizacje, zmieniono kolejnść w html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<!-- <header class="header">
+<header class="header container">
   <nav class="nav-layout">
     <ul class="list site-nav">
       <li><a href="" class="link" id="">How It Works</a></li>
@@ -7,12 +7,19 @@
     </ul>
     <div class="logo-box">
       <svg class="logo" width="16" height="16">
-        <use href=""></use>
+        <use href="./images/icons.svg#icon-logo"></use>
       </svg>
-      <a href="" class="logo-text">fresh harvest box </a>
+      <a href="./index.html" class="logo-text">fresh harvest box </a>
     </div>
-    <svg class="icon-basket" width="18.67" height="23.33">
-      <use href=""></use>
-    </svg>
+    <div>
+      <svg class="icon-basket" width="18.67" height="23.33">
+        <use href="./images/icons.svg#icon-basket"></use>
+      </svg>
+    </div>
+    <div id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </nav>
-</header> -->
+</header>
