HTML CSS changes
Dodano stylizacje, zmieniono kolejnść w html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,24 @@
-<header class="header"></header>
+<header class="header container">
     <nav class="nav-layout">
-        <ul class="list site-nav">
-            <li><a href="" class="link" id="">How It Works</a></li>
-            <li><a href="" class="link" id="">Fruits</a></li>
-            <li><a href="" class="link" id="">Contacts</a></li>
-        </ul>
         <div class="logo-box">
             <svg class="logo" width="16" height="16">
-                <use href="./images/Icons-svg.svg#icon-logo"></use>
+                <use href="./images/icons.svg#icon-logo"></use>
             </svg>
             <a href="./index.html" class="logo-text">fresh harvest box
             </a>
         </div>
+        <ul class="list site-nav">
+            <li><a href="" class="link" id="how-it-works">How It Works</a></li>
+            <li><a href="" class="link" id="fruits">Fruits</a></li>
+            <li><a href="" class="link" id="contacts">Contacts</a></li>
+        </ul>
         <svg class="icon-basket" width="18.67" height="23.33">
-            <use href="./images/Icons-svg.svg#icon-basket"></use>
+            <use href="./images/icons.svg#icon-basket"></use>
         </svg>
+        <div id="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </nav>
+</header>
