--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,2 +1,119 @@
 .header {
+    background-color: var(--white-color);
+}
+
+.list {
+    list-style: none;
+    font-style: normal;
+}
+
+a {
+    text-decoration: none;
+    position: relative;
+}
+.nav-layout {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 16px 0;
+    position: relative;
+    margin-left: 20px;
+}
+
+.site-nav {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    visibility: hidden;
+}
+
+.site-nav .link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    color: var(--bg-color);
+    padding: 0 20px;
+}
+
+.logo-box {
+    display: inline-flex;
+    justify-content: left;
+}
+
+.logo-text {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    color: var(--bg-color);
+}
+
+/* Hamburger menu z divami */
+#hamburger {
+    position: absolute;
+    top: 30%;
+    right: 0;
+    left: 0;
+    width: 20px;
+    height: 5px;
+    margin: 0 auto;
+    cursor: pointer;
+    margin-right: 42px;
+}
+
+#hamburger div {
+    position: relative;
+    height: 2px;
+    background-color: var(--bg-color);
+    margin-bottom: 5px;
+    transition: 0.3s ease;
+    border-radius: 5px;
+}
+
+#hamburger div:first-child {
+    width: 10px;
+}
+
+#hamburger div:last-child {
+    width: 15px;
+}
+
+#hamburger.open div:first-child {
+    top: 9px;
+    transform: rotateZ(45deg);
+    left: -1px;
+    width: 20px;
+}
+
+#hamburger.open div:last-child {
+    top: 2px;
+    transform: rotateZ(-45deg);
+    left: -2px;
+    width: 20px;
+}
+
+#hamburger.open div:nth-child(2) {
+    display: none;
+}
+
+
+@media screen and (min-width: 375px) and (max-width: 767px) {
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1279px) {
+    .site-nav {
+        visibility: visible;
+    }
+
+    .icon-basket {
+        visibility: visible;
+    }
+}
+
+
+@media only screen and (min-width: 1280px) {
+    
 }
