HTML CSS changes
Dodano styling w css i zmieniono kolejnosc w html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header container">
+  <<<<<<< HEAD
   <nav class="nav-layout">
     <ul class="list site-nav">
       <li><a href="" class="link" id="">How It Works</a></li>
