--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
             <li><a href="" class="link" id="contacts">Contacts</a></li>
         </ul>
         <svg class="icon-basket" width="18.67" height="23.33">
-            <use href="./images/icons.svg#icon-basket"></use>
+            <use href="../images/Icons-svg.svg#icon-basket"></use>
         </svg>
         <div id="hamburger">
             <div></div>
