--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,2 +1,10 @@
-<footer class="footer"></footer>
-<!--test-->
+<footer class="footer-background">
+  <div>
+    <img
+      class="footer-woman-image"
+      src="images/demo.jpg"
+      alt="Happy woman holding bananas in her
+    hands."
+    />
+  </div>
+</footer>
