--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,23 +1,21 @@
-
 /* Global Settings */
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
-    font-family: "DM Sans", Tahoma, Verdana, sans-serif;
+  font-family: 'DM Sans', Tahoma, Verdana, sans-serif;
 }
 :root {
-    --color-black: #000000;
-    --color-red: #AE1332;
-    --color-green: #A4CB66;
-    --color-yellow: #F5CE13;
-    --color-white: #FFFFFF;
-
+  --color-black: #000000;
+  --color-red: #ae1332;
+  --color-green: #a4cb66;
+  --color-yellow: #f5ce13;
+  --color-white: #ffffff;
 }
 
 /* Nav Styling */
@@ -118,12 +116,43 @@ html {
 @media only screen and (min-width: 768px) and (max-width: 1279px) {
   .site-nav {
     visibility: visible;
+    justify-content: flex-start;
+    margin-left: 32px;
   }
 
+  .logo-box {
+    justify-content: center;
+  }
   .icon-basket {
     visibility: visible;
+    margin-right: 42px;
+  }
+
+  #hamburger {
+    visibility: hidden;
   }
 }
 
 @media only screen and (min-width: 1280px) {
+  .nav-layout {
+    justify-content: space-between;
+  }
+  .site-nav {
+    visibility: visible;
+    justify-content: flex-start;
+    margin-left: 32px;
+  }
+
+  .logo-box {
+    justify-content: center;
+  }
+
+  .icon-basket {
+    visibility: visible;
+    margin-right: 42px;
+  }
+
+  #hamburger {
+    visibility: hidden;
+  }
 }
