--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
   <nav class="nav-layout">
     <ul class="list site-nav">
       <li><a href="" class="link" id="">How It Works</a></li>
@@ -15,4 +15,4 @@
       <use href=""></use>
     </svg>
   </nav>
-</header>
+</header> -->
