--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -110,7 +110,42 @@ html {
   display: none;
 }
 
+@media screen and (max-width: 375px) .backdrop {
+  visibility: hidden;
+}
 @media screen and (min-width: 375px) and (max-width: 767px) {
+  .backdrop {
+    position: absolute;
+    right: 0;
+    top: 50px;
+    background-color: var(--color-red);
+    height: 92vh;
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+    transform: translate(100%);
+    transition: 0.3s ease-in-out;
+    justify-content: center;
+  }
+
+  .modal-site-nav {
+    background-color: var(--color-red);
+    line-height: 3em;
+    margin-top: 60px;
+  }
+
+  .modal-site-nav .link {
+    color: var(--color-white);
+  }
+
+  .modal-icon {
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .icon-basket {
+    visibility: hidden;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1279px) {
