--- a/src/sass/_setup.scss
+++ b/src/sass/_setup.scss
@@ -2,7 +2,7 @@
   --black-color: #000000;
   --white-color: #ffffff;
   --bg-color: #ae1332;
-  --text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
+  --text-shadow: 0 4px 70px rgba(0, 0, 0, 0.1);
   --letter-spacing: -0.04em;
   --letter-spacing-smaller: -0.02em;
 }
