--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,10 @@
 <header class="header container">
     <nav class="nav-layout">
+        <ul class="list site-nav">
+            <li><a href="" class="link" id="how-it-works">How It Works</a></li>
+            <li><a href="" class="link" id="fruits">Fruits</a></li>
+            <li><a href="" class="link" id="contacts">Contacts</a></li>
+        </ul>
         <div class="logo-box">
             <svg class="logo" width="16" height="16">
                 <use href="./images/icons.svg#icon-logo"></use>
@@ -7,21 +12,18 @@
             <a href="./index.html" class="logo-text">fresh harvest box
             </a>
         </div>
-        <ul class="list site-nav">
-            <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-            <li><a href="" class="link" id="fruits">Fruits</a></li>
-            <li><a href="" class="link" id="contacts">Contacts</a></li>
-        </ul>
-        <svg class="icon-basket" width="18.67" height="23.33">
-            <use href="../images/icons.svg#icon-basket"></use>
-        </svg>
+        <div>
+            <svg class="icon-basket" width="18.67" height="23.33">
+                <use href="../images/icons.svg#icon-basket"></use>
+            </svg>
+        </div>
         <div id="hamburger">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </nav>
-    <div class="backdrop" data-modal>
+    <!-- <div class="backdrop" data-modal>
 
         <ul class="list modal-site-nav">
             <li><a href="" class="link" id="how-it-works">How It Works</a></li>
@@ -33,5 +35,5 @@
                 <use href="../images/icons.svg#icon-basket-white"></use>
             </svg>
         </div>
-    </div>
+    </div> -->
 </header>
