--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero container">
     <h1 class="hero-header">fresh harvest box is your one-stop place for a delicious fruit basket</h1>
     <div class="hero-banner">
 
