--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,26 +14,13 @@
         </div>
         <div>
             <svg class="icon-basket" width="18.67" height="23.33">
-                <use href="../images/icons.svg#icon-basket"></use>
+                <use href="./images/icons.svg#icon-basket"></use>
             </svg>
         </div>
-        <div id="hamburger">
+        <div class="hamburger" id="hamburger">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </nav>
-    <!-- <div class="backdrop" data-modal>
-
-        <ul class="list modal-site-nav">
-            <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-            <li><a href="" class="link" id="fruits">Fruits</a></li>
-            <li><a href="" class="link" id="contacts">Contacts</a></li>
-        </ul>
-        <div class="modal-icon">
-            <svg class="modal-icon-basket" width="18.67" height="23.33">
-                <use href="../images/icons.svg#icon-basket-white"></use>
-            </svg>
-        </div>
-    </div> -->
 </header>
