--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,10 +13,10 @@
     </div>
     <div>
       <svg class="icon-basket" width="18.67" height="23.33">
-        <use href="../images/icons.svg#icon-basket"></use>
+        <use href="./images/icons.svg#icon-basket"></use>
       </svg>
     </div>
-    <div id="hamburger">
+    <div class="hamburger" id="hamburger">
       <div></div>
       <div></div>
       <div></div>
