--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -2,7 +2,7 @@
   background-color: var(--white-color);
 }
 
-.nav-layout {
+.header .nav-layout {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,18 +11,18 @@
   margin-left: 20px;
 }
 
-.site-nav {
+.header .site-nav {
   list-style-type: none;
   justify-content: space-around;
   display: none;
 }
 
-.logo-box {
+.header .logo-box {
   display: inline-flex;
   justify-content: left;
 }
 
-.logo-text {
+.header .logo-text {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
@@ -35,8 +35,9 @@
 }
 
 /* Hamburger menu z divami */
-#hamburger {
-  display: block;
+.header .hamburger {
+  display: flex;
+  flex-direction: column;
   top: 18px;
   right: 0;
   width: 20px;
@@ -46,7 +47,7 @@
   margin-right: 42px;
 }
 
-#hamburger div {
+.header .hamburger div {
   height: 2px;
   background-color: var(--bg-color);
   margin-bottom: 5px;
@@ -54,29 +55,29 @@
   border-radius: 5px;
 }
 
-#hamburger div:first-child {
+.hamburger div:first-child {
   width: 10px;
 }
 
-#hamburger div:last-child {
+.hamburger div:last-child {
   width: 15px;
 }
 
-#hamburger.open div:first-child {
+.hamburger.open div:first-child {
   top: 9px;
   transform: rotateZ(45deg);
   left: -1px;
   width: 20px;
 }
 
-#hamburger.open div:last-child {
+.hamburger.open div:last-child {
   top: 2px;
   transform: rotateZ(-45deg);
   left: -2px;
   width: 20px;
 }
 
-#hamburger.open div:nth-child(2) {
+.hamburger.open div:nth-child(2) {
   display: none;
 }
 
@@ -97,7 +98,7 @@
     max-width: 768px;
   }
 
-  #hamburger {
+  .hamburger {
     display: none;
   }
 
@@ -126,7 +127,7 @@
 }
 
 @media only screen and (min-width: 1280px) {
-  #hamburger {
+  .hamburger {
     display: none;
   }
   .nav-layout {
@@ -141,16 +142,13 @@
   .site-nav .link {
     padding: 0 20px;
   }
+
   .logo-box {
     justify-content: center;
   }
 
   .icon-basket {
-    visibility: visible;
+    display: flex;
     margin-right: 42px;
-  }
-
-  #hamburger {
-    visibility: hidden;
   }
 }
