working on HERO
adding photos and positioning od hero banner

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,24 @@
 <section class="hero">
-<h1 class="hero-header">fresh harvest box is your one-stop place for a delicious fruit basket</h1>
-<div class="hero-banner">
 
-</div>
-</h1> 
+<h1 class="hero-header container">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
+</h1>
+
+<div class="hero-banner">
+    <ul class="fruits-hero">
+
+        <li class="fruit-li">
+            <img alt="blurred small image of bananas"
+            srcset="../images/hero-ban-mobile.png 1x, ../images/hero-ban-mobile@2x.png"
+            src="../images/hero-ban-mobile.png" />
+        </li>
+
+    <li class="fruit-li">
+        <img alt="blurred small image of strawberries" srcset="../images/hero-straw-mobile.png 1x, ../images/hero-straw-mobile@2x.png"
+            src="../images/hero-straw-mobile.png" />
+    </li>
+
+    </ul>
+  
+</div> 
+
 </section>
