--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,17 +1,16 @@
-.hero {
-    background-color: #AE1332;
-}
-
-.container .hero {
-    max-width: 335px;
+.hero .container {
     border: 1px dashed blue;
+    position: relative;
 }
 
 .hero-header {
-    font-family: var(--font-family);
+    z-index: 999;
+    margin-top: 56px;
+    width: 100%;
+    height: 118px;
     font-weight: 500;
-    font-size: 32px;
-    line-height: 100%;
+    font-size: 28px;
+    line-height: 1;
     letter-spacing: -0.04em;
     text-transform: uppercase;
     text-align: center;
@@ -20,7 +19,19 @@
 }
 
 .hero-banner {
+    position: absolute;
+    top: 116px;
+    left:0;
+    right: 0;
+    justify-items: center;
+    margin: 0 auto;
+    width: 311px;
+    height: 484px;
+    background-image: url(../images/hero-girl-mobile.jpg);
+    background-size: cover;
+    border-radius: 500px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border-radius: 50%;
-
+    // outline: 1px solid white;
+    // outline-offset: 12px;
 }
+
