working on HERO
adding photos and positioning od hero banner

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,5 +1,6 @@
 .hero .container {
     border: 1px dashed blue;
+    position: relative;
 }
 
 .hero-header {
@@ -19,6 +20,10 @@
 }
 
 .hero-banner {
+    position: absolute;
+    top: 116px;
+    left:0;
+    right: 0;
     justify-items: center;
     margin: 0 auto;
     width: 311px;
