--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -86,8 +86,8 @@
             </ul>
     </div>
 
-    <div class="order-btn" id="order-btn-click">
-        <button>
+    <div class="order-btn">
+        <button id="order-btn-click">
             <img src="">
             Order
         </button>
