--- a/src/partials/howitworks.html
+++ b/src/partials/howitworks.html
@@ -1,1 +1,41 @@
-<section class="howitworks"></section>
+<section class="howitworks container">
+  <div>
+    <div class="howitworks-header">
+      <h2 class="howitworks-title">To order your fruit basket, simply follow these easy steps</h2>
+      <p class="howitworks-text">
+        Our baskets are assembled with care and delivered straight to your doorstep, so you can
+        enjoy the taste of fresh fruit without ever leaving your home. Whether you're looking for a
+        healthy snack or a thoughtful gift, our fruit baskets are the perfect choice.
+      </p>
+    </div>
+    <ul class="howitworks-list">
+      <li class="howitworks-blocks">
+        <div class="howitworks-block-step">
+          <button class="howitworks-cta-first">First Step</button>
+          <p class="howitworks-blocks-text">
+            Just choose the fruit you want to order by clicking on the checkboxes next to it.
+          </p>
+        </div>
+      </li>
+      <li class="howitworks-blocks">
+        <div class="howitworks-block-step">
+          <button class="howitworks-cta-second">Second Step</button>
+          <p class="howitworks-blocks-text">Click on the basket and fill out the form.</p>
+        </div>
+      </li>
+      <li class="howitworks-blocks">
+        <div class="howitworks-block-step">
+          <button class="howitworks-cta-third">Third Step</button>
+          <p class="howitworks-blocks-text">
+            Sit back and relax! Your fresh fruit basket will be delivered.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <img
+    class="howitworks-gif"
+    src="./images/fresh-harvest-box.gif"
+    alt="Animation of fresh fruits"
+  />
+</section>
