--- a/src/sass/_howitworks.scss
+++ b/src/sass/_howitworks.scss
@@ -1,2 +1,181 @@
 .howitworks {
+  margin-bottom: 80px;
+}
+
+.howitworks-header {
+  margin: 0 auto 44px;
+}
+
+.howitworks-title {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: var(--letter-spacing);
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--white-color);
+  margin-bottom: 14px;
+  text-shadow: var(--text-shadow);
+}
+
+.howitworks-text {
+  font-weight: 400;
+  line-height: 1.28571;
+  letter-spacing: var(--letter-spacing);
+  text-align: center;
+  color: var(--white-color);
+  text-shadow: var(--text-shadow);
+}
+
+.howitworks-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 44px;
+}
+
+.howitworks-blocks {
+  width: 335px;
+  height: 112px;
+  background-color: var(--white-color);
+  border-radius: 20px;
+}
+
+.howitworks-block-step {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+  width: 295px;
+  height: 72px;
+  margin: 20px;
+}
+
+.howitworks-cta-first {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.33333;
+  letter-spacing: var(--letter-spacing);
+  color: var(--white-color);
+  display: block;
+  border: none;
+  border-radius: 200px;
+  min-width: 136px;
+  height: 48px;
+  background-color: var(--bg-color);
+  text-align: center;
+}
+
+.howitworks-blocks-text {
+  font-weight: 400;
+  line-height: 1.28571;
+  letter-spacing: var(--letter-spacing);
+  color: var(--black-color);
+  text-shadow: var(--text-shadow);
+}
+
+.howitworks-cta-second {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.33333;
+  letter-spacing: var(--letter-spacing);
+  color: var(--white-color);
+  display: block;
+  border: none;
+  border-radius: 200px;
+  min-width: 136px;
+  height: 48px;
+  background-color: #a1c864;
+  text-align: center;
+}
+
+.howitworks-cta-third {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.33333;
+  letter-spacing: var(--letter-spacing);
+  color: var(--white-color);
+  display: block;
+  border: none;
+  border-radius: 200px;
+  min-width: 136px;
+  height: 48px;
+  background-color: #f5ce13;
+  text-align: center;
+}
+.howitworks-gif {
+  border-radius: 20px;
+  width: 335px;
+  height: 476px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+/* =================TABLET================= */
+
+@media screen and (min-width: 768px) {
+  .howitworks {
+    margin-bottom: 144px;
+  }
+
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+
+  .howitworks-title {
+    font-size: 40px;
+    line-height: 1.1;
+    letter-spacing: var(--letter-spacing-smaller);
+  }
+  .howitworks-header {
+    width: 624px;
+    text-align: center;
+  }
+  .howitworks-text {
+    max-width: 509px;
+    letter-spacing: -0.045em;
+    margin: 0 auto;
+  }
+
+  .howitworks-list {
+    gap: 24px;
+  }
+
+  .howitworks-blocks {
+    width: 389px;
+    height: 128px;
+  }
+
+  .howitworks-block-step {
+    width: 349px;
+    height: 48px;
+    margin: 40px 20px;
+  }
+
+  .howitworks-gif {
+    min-width: 704px;
+  }
+}
+
+/* =================DESKTOP================= */
+
+@media screen and (min-width: 1280px) {
+  .howitworks {
+    margin-bottom: 150px;
+  }
+
+  .container {
+    max-width: 1280px;
+  }
+
+  .howitworks-list {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .howitworks-gif {
+    width: 860px;
+  }
 }
